<resources>
    <string name="app_name">Расписание</string>
    <string name="time">15:00\n3\n16:30</string>
    <string name="week">  Неделя</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wensday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>

    <string name="oneStart">9:30</string>
    <string name="oneEnd">11:00"</string>

    <string name="twoStart">11:10</string>
    <string name="twoEnd">12:40</string>

    <string name="threeStart">13:00</string>
    <string name="threeEnd">14:30</string>

    <string name="fourStart">15:00</string>
    <string name="fourEnd">16:30</string>

    <string name="fiveStart">16:40</string>
    <string name="fiveEnd">18:10</string>

    <string name="sixStart">18:30</string>
    <string name="sixEnd">20:00</string>

    <string name="lection">Лекция</string>
    <string name="lab">Лабораторная работа</string>
    <string name="practic">Практическая работа</string>
    <string name="course">Курсовая работа</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>